web/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todomvc-web
  labels:
    app: todomvc-web
spec:
  selector:
    matchLabels:
      app: todomvc-web
  template:
    metadata:
      labels:
        app: todomvc-web
      annotations:
        dapr.io/enabled: "true"
        dapr.io/app-id: web
        dapr.io/app-port: "8080"
        dapr.io/config: todo-web
    spec:
      containers:
        - name: todomvc-web
          image: todomvc_web_server
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
          resources:
            requests:
              memory: "32Mi"
              cpu: "100m"
            limits:
              memory: "128Mi"
              cpu: "500m"
