web/manifests/virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: todomvc-web
spec:
  hosts:
    - todo.red-badger.com
  gateways:
    - istio-system/todo-gateway
  http:
    # - match:
    #     - uri:
    #         prefix: "/"
    #   rewrite:
    #     uri: "/v1.0/invoke/web/method/"
    #   route:
    #     - destination:
    #         port:
    #           number: 80
    #         host: web-dapr
    - route:
        - destination:
            port:
              number: 80
            host: todomvc-web
